added opstions for only converting video and only extracting subtitles